fixed timeline section responsive width overflowing

--- a/src/pages/components/Sections/Timeline/Timeline.css
+++ b/src/pages/components/Sections/Timeline/Timeline.css
@@ -10,7 +10,6 @@
   font-size: 0.7rem;
 }
 .timeline{
-  width:100vh;
   min-width: 200px;
   padding:2rem 0;
 }
